# RemoteMessage

./: .gitignore  README.md
.github/workflows/: android-gateway-release.yml  android-gateway.yml  flutter-client-release.yml  flutter-client.yml  middle-server-release.yml  middle-server.yml
android_gateway/: THIRD_PARTY_NOTICES.md  settings.gradle
android_gateway/app/: build.gradle
android_gateway/app/src/main/: AndroidManifest.xml
android_gateway/app/src/main/res/drawable/: ic_check_circle.xml  (+9 more)
client/: apply_client_icons.py  configure_client_app_identity.py  configure_client_desktop_support.py  linux_package_release.sh  linux_post_install.sh
client/flutter_client_source/lib/: main.dart
client/flutter_client_source/lib/src/: android_launcher_icon_service.dart  app.dart  app_data.dart  compose_message_page.dart  message_home_page.dart  onboarding_qr.dart  qr_live_scan_page.dart  settings_page.dart
middle_server/: Program.cs  README.md  RemoteMessage.MiddleServer.csproj
middle_server/Api/: ApiSupport.cs
middle_server/Config/: HttpsCertificateSettings.cs  OnboardingQrBootstrap.cs  ServerRuntimeSettings.cs
middle_server/Contracts/: ApiContracts.cs
middle_server/Core/: MessageIdentity.cs  RuntimeLayout.cs
middle_server/Data/: SqliteRepository.cs
middle_server/Infrastructure/: FileLogger.cs
middle_server/Security/: CryptoState.cs  GatewayRegistry.cs
middle_server_rust/: Cargo.toml  README.md
middle_server_rust/src/: api.rs  certificate.rs  config.rs  crypto.rs  logger.rs  main.rs  models.rs  onboarding.rs  registry.rs  repository.rs  runtime.rs
(+60 files in other folders)
