[package]
name = "remote_message_middle_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
if-addrs = "0.15"
qrcode = "0.14"
rand = "0.8"
rcgen = "0.12.1"
rsa = { version = "0.9", features = ["pem"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
